[package]
name = "kaleidoscope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scopeguard = "1.1.*"
inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "c0e13b7", features = ["llvm13-0"] }
clap = { version = "*", features=["derive"] }

[dev-dependencies]
pretty_assertions = { version = "1.0.0" }
llvm-sys = { version = "130.0.3" }
indoc = { version = "1.0.3" }
